@@ -9,7 +9,6 @@ package com.mars_sim.console.chat.simcommand.settlement;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.mars_sim.console.chat.ChatCommand;
 import com.mars_sim.console.chat.Conversation;
@@ -34,13 +33,13 @@ public class MissionCreateCommand extends AbstractSettlementCommand {
 		// Get the user to select the Mission
 		List<MetaMission> automissions = MetaMissionUtil.getMetaMissions().stream()
 						.filter(m -> settlement.isMissionEnable(m.getType()))
-						.collect(Collectors.toList());
+						.toList();
 		
 		// Add the none auto missions
 		List<MetaMission> missions = new ArrayList<>(automissions);
 		missions.add(new TestDriveMetaMission());
 
-		List<String> names = missions.stream().map(MetaMission::getName).collect(Collectors.toList());				
+		List<String> names = missions.stream().map(MetaMission::getName).toList();				
 		int choice = CommandHelper.getOptionInput(context, names, "Pick a mission from above by entering a number");
 		if (choice < 0) {
 			return false;
@@ -50,13 +49,13 @@ public class MissionCreateCommand extends AbstractSettlementCommand {
 		// Select leader
 		List<Person> leaders = settlement.getAllAssociatedPeople().stream()
 								.filter(p -> p.getMission() == null && p.isInSettlement())
-								.collect(Collectors.toList());
+								.toList();
 		
 		// Create name and the suitability
 		List<String> pNames = leaders.stream()
 								.map(p -> p.getName() + ", suitability "
 										+ (choosen.getLeaderSuitability(p) > 0.5D ? "high" : "low"))
-								.collect(Collectors.toList());
+								.toList();
 		int leaderNum = CommandHelper.getOptionInput(context, pNames, "Pick a leader from above by entering a number");
 		if (leaderNum < 0) {
 			return false;
@@ -64,9 +63,7 @@ public class MissionCreateCommand extends AbstractSettlementCommand {
 		Person leader = leaders.get(leaderNum);
 
 		// Confirmation
-		context.println("Create a " + choosen.getName() + " Mission with leader " + leader.getName());
-		String confirmation = context.getInput("Y/N");
-		if ("Y".equals(confirmation)) {
+		if (context.getBooleanInput("Create a " + choosen.getName() + " Mission with leader " + leader.getName())) {
 			// Create without a review
 			Mission newMission = choosen.constructInstance(leader, false);
 			if (newMission.isDone()) {
